# Renderer

./: .gitignore  CMakeLists.txt  DESIGN_IDEAS.md  README.md  compile_shaders.sh
logos/: logo_info.txt
shaders/: mesh_shader.frag  mesh_shader.vert  rgb_triangle.frag  rgb_triangle.vert
shaders/compiled/: mesh_shader.frag.spv  mesh_shader.vert.spv  rgb_triangle.frag.spv  rgb_triangle.vert.spv
src/: AllocatedBuffer.hpp  AllocatedImage.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Common.hpp  Config.hpp  DebugMessenger.cpp  DebugMessenger.hpp  DeletionQueue.hpp  Device.cpp  Device.hpp  ExtensionsAndLayers.cpp  ExtensionsAndLayers.hpp  FrameData.hpp  GPUCameraData.hpp  Initializers.cpp  Initializers.hpp  KeyboardState.cpp  KeyboardState.hpp  Material.hpp  Math.cpp  Math.hpp  Mesh.cpp  Mesh.hpp  MeshPushConstants.hpp  MouseState.cpp  MouseState.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  PipelineConfig.hpp  PushData.hpp  QueueFamilyData.cpp  QueueFamilyData.hpp  README.md  RenderObject.cpp  RenderObject.hpp  Renderer.cpp  Renderer.hpp  ReturnCode.hpp  (+16 more)
trash/: PipelineManager.cpp  PipelineManager.hpp
trash/Utils/: ResourceManager.hpp  ResourceManagerImpl.hpp
